# curvesimilarities

./: .flake8  CHANGELOG.md  LICENSE  README.md  pyproject.toml
doc/source/: conf.py  index.rst  plot-header.py  plot_pre_code
src/: conftest.py
src/curvesimilarities/: __init__.py  averagefrechet.py  dfd.py  dtw.py  frechet.py  hausdorff.py  integfrechet.py  util.py
src/curvesimilarities/_algorithms/: dfd.py  dtw.py  fd.py  ifd.py  lcfm.py
tests/: conftest.py  test_afd.py  test_dtw.py  test_fd.py  test_ifd.py
